src/app.scss
/* ... */
.template-editor .cm-editor {
  height: 200px;
}

.sheet-result {
  border-left: 1px solid $grey-lighter;
}

.preview-editor {
  min-height: 35px;
}

.search-query-editor {
  border: 1px solid $grey-lighter;
  border-radius: $radius;
  background: $white;
  padding: 2px 5px;
  width: calc(100vw - 20px);
  @include desktop {
    width: 800px;
  }
}

.full-height {
  max-height: $editor-full-height;
}

.editor .cm-editor {
  max-height: $editor-full-height;
}

.cm-scroller {
  overflow: auto;
  font-family: $family-monospace !important;
  font-size: 0.9285714285714286rem;
}

.cm-focused {
  outline: none !important;
}

.cm-tooltip-hover {
  font-family: $family-monospace;
}

.cm-tag {
  height: 1.5em !important;
}

.svelte-select {
  --chevron-color: hsl(229deg, 53%, 53%);
  --font-size: 1rem;
  --background: #{$white};
  --list-background: #{$white};
  --item-hover-bg: #{$white-bis};
  --item-hover-color: #{$black-bis};
  --item-color: #{$text};
  --item-is-active-bg: #{$white-ter};
  --item-is-active-color: #{$black-ter};
  --border: 1px solid #{$grey-lighter};
  --border-focused: 1px solid #{$grey-lighter};
  --border-hover: 1px solid #{$grey-lighter};
  --list-shadow: #{$shadow};
  --height: 35px;
  --max-height: 35px;
  --multi-item-bg: #{$white-ter};
  --multi-item-outline: none;
  --multi-item-padding: 0 0.714em;
  --multi-item-clear-icon-color: #{$grey};

  .item.active span.name {
    font-weight: bold;
  }

  .selected-item {
    font-weight: bold;
    .tag {
      font-weight: normal !important;
    }
  }
}

.svelte-select.is-expandable {
  --max-height: 200px;
}

.sc-carousel-dots__dot-container {
  margin-top: 0.714em;
}

.sc-carousel-button.sc-carousel-dot__dot {
  color: $grey-lighter;

  button {
    color: $grey-lighter;
    &.sc-carousel-dot__dot_active {
      color: $grey-light;

      &:focus {
        outline: none;
      }
    }
  }
}

.custom-arrow-prev {
  border-radius: $radius 0 0 $radius;
  left: 0;
}

.custom-arrow-next {
  border-radius: 0 $radius $radius 0;
  right: 0;
}

.custom-arrow {
  width: 1.5rem;
  position: absolute;
  top: 0;
  bottom: 0;
  z-index: 1;
  transition: opacity 150ms ease;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  -webkit-tap-highlight-color: transparent;
  background-color: $white-ter;
  opacity: 0.5;

  &:hover {
    opacity: 1;
  }
}

nav.breadcrumb a.is-inactive {
  color: $grey;
  cursor: default;
  pointer-events: none;
}

.breadcrumb.has-chevron-separator li + li::before {
  font-family: "Font Awesome 6 Free";
  font-weight: 900;
  content: unquote('"#{ $fa-var-chevron-right }"');
  color: $link;
}

div.small-box:hover {
  background-color: $white-bis;
}

span.progress-percent {
  position: absolute;
  top: 0;
  margin-right: 5px;
  margin-top: 1px;
  color: $white;
}

span.progress-percent.less-than-10 {
  margin-left: 5px;
  color: $black-ter;
}

.progress {
  background: $white-ter;
}

.transaction.bordered {
  border-bottom: 1px solid rgba($grey-lightest, 0.5);
  padding-bottom: 1px;
}

.dropzone {
  border-color: $white-ter !important;
  background-color: $white-bis !important;
  color: $grey !important;
  transition: none !important;
}

.budget-card {
  .budget-label {
    width: 80px;
    text-align: right;
    color: $grey-light;
  }

  .budget-amount {
    width: 80px;
    text-align: right;
    font-weight: bold;

    &.info {
      font-weight: bold;
      padding: 2px 10px;
      background: $grey-lighter;
      color: $grey;
      border-radius: 10px;
    }

    &.success {
      font-weight: bold;
      padding: 2px 10px;
      background: #b2df8a;
      color: #257953;
      border-radius: 10px;
    }

    &.danger {
      font-weight: bold;
      padding: 2px 10px;
      background: #fb9a99;
      color: #cc0f35;
      border-radius: 10px;
    }

    &.warn {
      font-weight: bold;
      padding: 2px 10px;
      background: #ffe08a;
      color: #946c00;
      border-radius: 10px;
    }
  }
}

.month-picker {
  .months {
    width: 200px;

    .month {
      width: 50px;
      text-align: center;
    }
  }
}

.border-none {
  border-radius: 0 !important;
}

.border-left {
  border-radius: $radius 0 0 $radius !important;
}

.border-right {
  border-radius: 0 $radius $radius 0 !important;
}

.config-header {
  margin-left: -3px;
  margin-bottom: 5px;
}

.config-body {
  padding: 10px 0 10px 10px;
  margin-bottom: 10px;
  border-left: 1px solid $grey-lighter;
  border-bottom: 1px solid $grey-lighter;

  &.odd {
    background-color: rgba(127, 127, 127, 0.05);
  }

  &.even {
    background-color: transparent;
  }
}

.config-delete,
.config-add {
  float: right;
  margin-right: 10px;
}

.config-delete {
  color: $danger;
}

.config-add {
  float: none;
  color: $success;
}

input:invalid,
textarea:invalid {
  border-color: $danger;
}

.dropdown-trigger.dropdown-icon {
  button {
    height: 2rem;
    padding: 0;
    border: none;
    background: none;
  }

  button:hover {
    color: $link;
  }
}

.nested.has-dropdown {
  &:hover > .dropdown-menu {
    display: block;
  }

  > .navbar-link {
    padding: 0;
    width: 100%;

    > span.icon {
      float: right;
    }
  }

  .dropdown-menu {
    top: -15px;
    margin-left: calc(100% - 10px);

    .dropdown-content {
      box-shadow: $shadow;
    }
  }

  @include mobile {
    .dropdown-menu {
      position: static;
      margin-left: 0;

      .dropdown-content {
        box-shadow: none !important;
        background-color: transparent;
      }
    }
  }
}

.custom-icon,
[data-tippy-root] {
  font-family: $family-sans-serif-icon;
}

.posting-row {
  grid-template-columns: 6rem 20rem 16rem 8rem 10rem 8rem 6rem 6rem 6rem 6rem;
  grid-auto-flow: column;
  overflow-x: auto;
  border-bottom: 1px solid rgba($grey-lightest, 0.5);
}

div.is-hoverable:hover {
  background-color: $white-bis;
}
/* ... */

